--- a/index.html
+++ b/index.html
@@ -63,12 +63,20 @@
               </td>
               <td width="75%" valign="middle">
                 <!-- <a href="https://drive.google.com/file/d/1YvRx-4hrZoCk-nl6OgVJZlHAqOiN5hWq/view?usp=sharing"> -->
-                  <span class="papertitle">Prompt-Oriented View-agnostic Learning for Egocentric Hand-Object Interaction in the Multi-view World</span>
+                  <span class="papertitle"><a href="https://dl.acm.org/doi/10.1145/3581783.3612484"> Prompt-Oriented View-agnostic Learning for Egocentric Hand-Object Interaction in the Multi-view World</a></span>
                 <!-- </a> -->
                 <br>
                 <strong>Boshen Xu</strong>, <a href="http://zhengsipeng.github.io/">Sipeng Zheng</a>, <a href="http://www.jin-qin.com/">Qin Jin</a>
                 <br>
                 <em>ACM MM</em>, 2023
+                <br>
+                <a href="https://xuboshen.github.io/POV/">project page</a>
+                <!-- /
+                <a href="https://dl.acm.org/doi/10.1145/3581783.3612484">paper</a> -->
+                /
+                <a href="https://github.com/xuboshen/pov_acmmm2023">code</a>
+
+                <p></p>
                 <p>We propose a Prompt-Oriented
                   View-agnostic Learning (POV) framework in this paper, which
                   enables transfer learning from third-person videos to egocentric videos. Specifically, we introduce interactive masking prompts at the frame level to capture fine-grained
