modify POV citation

--- a/POV/index.html
+++ b/POV/index.html
@@ -229,11 +229,12 @@ optionally fine-tuned on limited egocentric videos.
       </h2>
       <div class="form-group col-md-10 col-md-offset-0">
         <textarea id="bibtex" class="form-control" readonly>
-@InProceedings{yin2022fishermatch,
-  author={Yin, Yingda and Wang, Yang and Wang, He and Chen, Baoquan},
-  title={A Laplace-inspired Distribution on SO(3) for Probabilistic Rotation Estimation},
-  booktitle={International Conference on Learning Representations (ICLR)},
-  year={2023},
+@inproceedings{xu2023pov,
+  title={POV: Prompt-Oriented View-Agnostic Learning for Egocentric Hand-Object Interaction in the Multi-view World},
+  author={Xu, Boshen and Zheng, Sipeng and Jin, Qin},
+  booktitle={Proceedings of the 31st ACM International Conference on Multimedia},
+  pages={2807--2816},
+  year={2023}
 }</textarea>
       </div>
     </div>
