--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                   Boshen Xu
                 </p>
                 <h2>About</h2>
-                <p> My research interests include relation understanding, video understanding, 3D computer vision and embodied AI. I'm currently working on 3D vision benefiting robotics.
+                <p> My research interests include video understanding and embodied AI. I'm currently working on 3D vision benefiting robotics.
                   </p>
                 <p>I am a first year PhD student at <a href="http://info.ruc.edu.cn/index.htm">Renmin University of China (RUC)</a> under the supervision of Professor <a href="https://www.jin-qin.com/">Qin Jin</a> at <a href="https://www.ruc-aim3.com/">AIM3 Lab</a>.
                   Prior to joining RUC, I got my bachelor degree from <a href="https://www.scse.uestc.edu.cn/">School of Computer Science and Engineering</a>, <a href="https://www.uestc.edu.cn/">University of Electronic Science and Technology of China (UESTC)</a>.
@@ -56,10 +56,35 @@
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           
+            <tr>
+              <td style="padding:20px;width:25%;vertical-align:middle">
+                <img src="images/motivation_SPAFormer.png" alt="clean-usnob" width="248" height="219" align="center">
+              </td>
+              <td width="75%" valign="middle">
+                <!-- <a href="https://drive.google.com/file/d/1YvRx-4hrZoCk-nl6OgVJZlHAqOiN5hWq/view?usp=sharing"> -->
+                  <span class="papertitle"><a href="https://arxiv.org/abs/2403.05874"> SPAFormer: Sequential 3D Part Assembly with Transformers.</a></span>
+                <!-- </a> -->
+                <br>
+                <strong>Boshen Xu</strong>, <a href="http://zhengsipeng.github.io/">Sipeng Zheng</a>, <a href="http://www.jin-qin.com/">Qin Jin</a>
+                <br>
+                <em>arxiv</em>, 2023
+                <br>
+                <!-- <a href="https://xuboshen.github.io/POV/">project page</a> -->
+                <!-- /
+                <a href="https://dl.acm.org/doi/10.1145/3581783.3612484">paper</a> -->
+                <!-- / -->
+                <a href="https://github.com/xuboshen/SPAFormer">code</a>
+                /
+                <a href="https://arxiv.org/abs/2403.05874">arxiv</a>
+
+                <p></p>
+                <p>We addresses the combinatorial explosion challenge by leveraging weak constraints from assembly sequences, effectively reducing the solution space's complexity. 
+              </td>
+            </tr>
 
             <tr>
               <td style="padding:20px;width:25%;vertical-align:middle">
-                <img src="images/motivation_POV.png" alt="clean-usnob" width="181" height="160" align="center">
+                <img src="images/motivation_POV.png" alt="clean-usnob" width="248" height="219" align="center">
               </td>
               <td width="75%" valign="middle">
                 <!-- <a href="https://drive.google.com/file/d/1YvRx-4hrZoCk-nl6OgVJZlHAqOiN5hWq/view?usp=sharing"> -->
@@ -75,13 +100,13 @@
                 <a href="https://dl.acm.org/doi/10.1145/3581783.3612484">paper</a> -->
                 /
                 <a href="https://github.com/xuboshen/pov_acmmm2023">code</a>
+                /
+                <a href="https://arxiv.org/abs/2403.05856">arxiv</a>
 
                 <p></p>
                 <p>We propose a Prompt-Oriented
-                  View-agnostic Learning (POV) framework in this paper, which
-                  enables transfer learning from third-person videos to egocentric videos. Specifically, we introduce interactive masking prompts at the frame level to capture fine-grained
-                  action information, and view-aware visual prompts at the token level to
-                  learn view-agnostic representation. .</p>
+                  View-agnostic Learning (POV) framework, which
+                  enables transfer learning from multi-view third-person videos to egocentric videos.</p>
               </td>
             </tr>
             <tr>
@@ -97,8 +122,7 @@
                 <br>
                 <em>CVPR</em>, 2023
                 <p>We introduce
-                  OpenCat, a language modeling framework that reformulates HOI prediction as sequence generation. By converting HOI triplets into a token sequence through a serialization scheme, our model is able to exploit the open-set
-                  vocabulary of the language modeling framework to predict novel interaction classes with a high degree of freedom.</p>
+                  OpenCat, a language modeling framework that reformulates HOI prediction as sequence generation.</p>
               </td>
             </tr>
 
@@ -111,6 +135,7 @@
                 <table width="100%" align="center" border="0" cellpadding="20"><tbody>
                   <ul>
                     <li>2023, Outstanding Graduate, Sichuan, China</li>
+                    <li>2021, Tencent Special Scholarship, UESTC & Tencent</li>
                     <li>2021, Second Prize of China Undergraduate Mathematical Contest in Modeling, China</li>
                     <li>2020, National Scholarship, UESTC, China</li>
                   </ul>
