--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <a href="https://arxiv.org/abs/2403.05856">arxiv</a>
 
                 <p></p>
-                <p>We propose POV, a visual prompt tuning framework that enables transfer learning from multi-view third-person videos to egocentric videos.</p>
+                <p>We propose POV, a view adaptation framework that enables transfer learning from multi-view third-person videos to egocentric videos.</p>
               </td>
             </tr>
             <tr>
