EgoNCE++ author list

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                   <span class="papertitle"><a href="https://arxiv.org/abs/2405.17719"> EgoNCE++: Do Egocentric Video-Language Models Really Understand Hand-Object Interactions? </a></span>
                 <!-- </a> -->
                 <br>
-                <strong>Boshen Xu</strong>, Ziheng Wang*, Yang Du*, <a href="http://zhengsipeng.github.io/">Sipeng Zheng*</a>, Zhinan Song, <a href="http://www.jin-qin.com/">Qin Jin</a>
+                <strong>Boshen Xu</strong>, Ziheng Wang*, Yang Du*, Zhinan Song, <a href="http://zhengsipeng.github.io/">Sipeng Zheng*</a>, <a href="http://www.jin-qin.com/">Qin Jin</a>
                 <br>
                 <em>arxiv</em>, 2024
                 <br>
