--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                   Boshen Xu
                 </p>
                 <h2>About</h2>
-                <p> My research interests include video understanding and embodied AI. I'm currently focus on egocentric vision and related topics that benefits embodied AI.
+                <p> My research interests include video understanding and embodied AI. I'm currently focus on egocentric vision and related topics that benefits VR/AR/Embodied AI.
                   </p>
-                <p>I am a first year PhD student at <a href="http://info.ruc.edu.cn/index.htm">Renmin University of China (RUC)</a> under the supervision of Professor <a href="https://www.jin-qin.com/">Qin Jin</a> at <a href="https://www.ruc-aim3.com/">AIM3 Lab</a>.
+                <p>I am a second-year PhD student at <a href="http://info.ruc.edu.cn/index.htm">Renmin University of China (RUC)</a> under the supervision of Professor <a href="https://www.jin-qin.com/">Qin Jin</a> at <a href="https://www.ruc-aim3.com/">AIM3 Lab</a>.
                   Prior to joining RUC, I got my bachelor degree from <a href="https://www.scse.uestc.edu.cn/">School of Computer Science and Engineering</a>, <a href="https://www.uestc.edu.cn/">University of Electronic Science and Technology of China (UESTC)</a>.
                   I got a GPA 3.97/4.00(90.41/100), ranked 2/65 in the major.
                 </p>
@@ -35,7 +35,8 @@
                   <!-- <a href="data/BoshenXu-bio.txt">Bio</a> &nbsp;/&nbsp; -->
                   <!-- <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Google Scholar</a> &nbsp;/&nbsp; -->
                   <!-- <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp;/&nbsp; -->
-                  <a href="https://github.com/xuboshen/">Github</a>
+                  <a href="https://github.com/xuboshen/">Github</a> &nbsp;/&nbsp;
+                  <a href="https://scholar.google.com/citations?user=K2BnqoIAAAAJ&hl=zh-CN">Google Scholar</a>
                 </p>
               </td>
               <td style="padding:2.5%;width:40%;max-width:40%">
@@ -59,7 +60,30 @@
           
 
 
+            <tr>
+              <td style="padding:20px;width:25%;vertical-align:middle">
+                <img src="images/motivation_unvealing.png" alt="clean-usnob" width="248" height="113.3 align="center">
+              </td>
+              <td width="75%" valign="middle">
+                <!-- <a href="https://drive.google.com/file/d/1YvRx-4hrZoCk-nl6OgVJZlHAqOiN5hWq/view?usp=sharing"> -->
+                  <span class="papertitle"><a href="https://arxiv.org/pdf/2409.06709"> Unveiling Visual Biases in Audio-Visual
+                    Localization Benchmarks </a></span>
+                <!-- </a> -->
+                <br>
+                <a href="https://openreview.net/profile?id=~Liangyu_Chen5">Liangyu Chen</a>, <a href="https://yuezih.github.io/">Zihao Yue</a>, <strong>Boshen Xu</strong>, <a href="http://www.jin-qin.com/">Qin Jin</a>
+                <br>
+                <em>ECCV AVGenL Workshop</em>, 2024
+                <br>
+                <!-- <a href="https://xuboshen.github.io/POV/">project page</a> -->
+                <!-- /
+                <a href="https://dl.acm.org/doi/10.1145/3581783.3612484">paper</a> -->
+                <!-- / -->
+                <a href="https://arxiv.org/pdf/2409.06709">arxiv</a>
 
+                <p></p>
+                <p> We reveal that current audio-visual source localization benchmarks (VGG-SS, Epic-Sounding-Object) are easily hacked by vision-only models, therefore calling for a benchmark that requires more audio cues.</p>
+              </td>
+            </tr>
 
             <tr>
               <td style="padding:20px;width:25%;vertical-align:middle">
@@ -70,7 +94,7 @@
                   <span class="papertitle"><a href="https://arxiv.org/abs/2405.17719"> EgoNCE++: Do Egocentric Video-Language Models Really Understand Hand-Object Interactions? </a></span>
                 <!-- </a> -->
                 <br>
-                <strong>Boshen Xu</strong>, Ziheng Wang*, Yang Du*, Zhinan Song, <a href="http://zhengsipeng.github.io/">Sipeng Zheng*</a>, <a href="http://www.jin-qin.com/">Qin Jin</a>
+                <strong>Boshen Xu</strong>, <a href="https://openreview.net/profile?id=~Ziheng_Wang5">Ziheng Wang*</a>, <a href="https://openreview.net/profile?id=~Yang_Du6">Yang Du*</a> , Zhinan Song, <a href="http://zhengsipeng.github.io/">Sipeng Zheng*</a>, <a href="http://www.jin-qin.com/">Qin Jin</a>
                 <br>
                 <em>arxiv</em>, 2024
                 <br>
@@ -179,7 +203,7 @@
               
                 <table width="100%" align="center" border="0" cellpadding="20"><tbody>
                   <ul>
-                    <li>Conference Reviewer for ACM MM 2023.</li>
+                    <li>Conference Reviewer for ICLR, ACM MM, ACCV.</li>
                   </ul>
 
                 </tbody></table>
