--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
               </td>
               <td width="75%" valign="middle">
                 <!-- <a href="https://drive.google.com/file/d/1YvRx-4hrZoCk-nl6OgVJZlHAqOiN5hWq/view?usp=sharing"> -->
-                  <span class="papertitle"><a href="https://arxiv.org/pdf/2409.06709"> Unveiling Visual Biases in Audio-Visual
-                    Localization Benchmarks </a></span>
+                  <span class="papertitle"><a href="https://arxiv.org/pdf/2409.06709"> Unveiling Visual Biases in Audio-Visual Localization Benchmarks </a></span>
                 <!-- </a> -->
                 <br>
                 <a href="https://openreview.net/profile?id=~Liangyu_Chen5">Liangyu Chen</a>, <a href="https://yuezih.github.io/">Zihao Yue</a>, <strong>Boshen Xu</strong>, <a href="http://www.jin-qin.com/">Qin Jin</a>
