SPAFormer is accepted by 3DV2025!

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                   Boshen Xu
                 </p>
                 <h2>About</h2>
-                <p> My research interests include video understanding and embodied AI. I'm currently focus on egocentric vision and related topics that benefits VR/AR/Embodied AI.
+                <p> My research interests include video understanding and embodied AI. I'm currently focus on egocentric vision and related topics that benefit VR/AR/Embodied AI.
                   </p>
                 <p>I am a second-year PhD student at <a href="http://info.ruc.edu.cn/index.htm">Renmin University of China (RUC)</a> under the supervision of Professor <a href="https://www.jin-qin.com/">Qin Jin</a> at <a href="https://www.ruc-aim3.com/">AIM3 Lab</a>.
                   Prior to joining RUC, I got my bachelor degree from <a href="https://www.scse.uestc.edu.cn/">School of Computer Science and Engineering</a>, <a href="https://www.uestc.edu.cn/">University of Electronic Science and Technology of China (UESTC)</a>.
@@ -125,7 +125,7 @@
                 <br>
                 <strong>Boshen Xu</strong>, <a href="http://zhengsipeng.github.io/">Sipeng Zheng</a>, <a href="http://www.jin-qin.com/">Qin Jin</a>
                 <br>
-                <em>arxiv</em>, 2024
+                <em>3DV</em>, 2025
                 <br>
                 <!-- <a href="https://xuboshen.github.io/POV/">project page</a> -->
                 <!-- /
@@ -204,9 +204,12 @@
                   <ul>
                     <li>Conference Reviewer for ICLR, ACM MM, ACCV.</li>
                   </ul>
+                  <ul>
+                    <li>Teaching Assistant for Multimedia Application Technology (RUC 2024 Fall).</li>
+                  </ul>
 
                 </tbody></table>
-              
+
             </td>
           </tr>
         </tbody></table>
