--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                   Boshen Xu
                 </p>
                 <h2>About</h2>
-                <p> My research interests include video understanding and embodied AI. I'm currently focus on egocentric vision and related topics that benefit VR/AR/Embodied AI.
+                <p> My research interests include video understanding (e.g., action recognition, vision-language pretraining, etc.) and embodied AI (e.g., 3D object assembly, 3D HOI reconstruction, etc.). I'm currently focus on egocentric vision and related topics that benefit VR/AR/Embodied AI.
                   </p>
                 <p>I am a second-year PhD student at <a href="http://info.ruc.edu.cn/index.htm">Renmin University of China (RUC)</a> under the supervision of Professor <a href="https://www.jin-qin.com/">Qin Jin</a> at <a href="https://www.ruc-aim3.com/">AIM3 Lab</a>.
                   Prior to joining RUC, I got my bachelor degree from <a href="https://www.scse.uestc.edu.cn/">School of Computer Science and Engineering</a>, <a href="https://www.uestc.edu.cn/">University of Electronic Science and Technology of China (UESTC)</a>.
@@ -90,12 +90,12 @@
               </td>
               <td width="75%" valign="middle">
                 <!-- <a href="https://drive.google.com/file/d/1YvRx-4hrZoCk-nl6OgVJZlHAqOiN5hWq/view?usp=sharing"> -->
-                  <span class="papertitle"><a href="https://arxiv.org/abs/2405.17719"> EgoNCE++: Do Egocentric Video-Language Models Really Understand Hand-Object Interactions? </a></span>
+                  <span class="papertitle"><a href="https://openreview.net/pdf?id=M8gXSFGkn2"> Do Egocentric Video-Language Models Truly Understand Hand-Object Interactions? </a></span>
                 <!-- </a> -->
                 <br>
-                <strong>Boshen Xu</strong>, <a href="https://openreview.net/profile?id=~Ziheng_Wang5">Ziheng Wang*</a>, <a href="https://openreview.net/profile?id=~Yang_Du6">Yang Du*</a> , Zhinan Song, <a href="http://zhengsipeng.github.io/">Sipeng Zheng*</a>, <a href="http://www.jin-qin.com/">Qin Jin</a>
+                <strong>Boshen Xu</strong>, <a href="https://openreview.net/profile?id=~Ziheng_Wang5">Ziheng Wang*</a>, <a href="https://openreview.net/profile?id=~Yang_Du6">Yang Du*</a> , Zhinan Song, <a href="http://zhengsipeng.github.io/">Sipeng Zheng</a>, <a href="http://www.jin-qin.com/">Qin Jin</a>
                 <br>
-                <em>arxiv</em>, 2024
+                <em>ICLR</em>, 2025
                 <br>
                 <!-- <a href="https://xuboshen.github.io/POV/">project page</a> -->
                 <!-- /
@@ -103,10 +103,10 @@
                 <!-- / -->
                 <a href="https://github.com/xuboshen/EgoNCEpp">code</a>
                 /
-                <a href="https://arxiv.org/abs/2405.17719">arxiv</a>
+                <a href="https://openreview.net/pdf?id=M8gXSFGkn2">paper</a>
 
                 <p></p>
-                <p>We propose EgoNCE++, an asymmetric contrastive learning pretraining objective for solving the lack of open-vocabulary EgoHOI recognition ability of EgoVLMs .</p>
+                <p>We propose EgoNCE++, an asymmetric contrastive learning pretraining objective to solve the EgoVLMs' weakness in distinguishing HOI combinations with word variations.</p>
               </td>
             </tr>
 
