adjust index.html

--- a/index.html
+++ b/index.html
@@ -60,30 +60,8 @@
           
 
 
-            <tr>
-              <td style="padding:20px;width:25%;vertical-align:middle">
-                <img src="images/motivation_unvealing.png" alt="clean-usnob" width="248" height="113.3 align="center">
-              </td>
-              <td width="75%" valign="middle">
-                <!-- <a href="https://drive.google.com/file/d/1YvRx-4hrZoCk-nl6OgVJZlHAqOiN5hWq/view?usp=sharing"> -->
-                  <span class="papertitle"><a href="https://arxiv.org/pdf/2409.06709"> Unveiling Visual Biases in Audio-Visual Localization Benchmarks </a></span>
-                <!-- </a> -->
-                <br>
-                <a href="https://openreview.net/profile?id=~Liangyu_Chen5">Liangyu Chen</a>, <a href="https://yuezih.github.io/">Zihao Yue</a>, <strong>Boshen Xu</strong>, <a href="http://www.jin-qin.com/">Qin Jin</a>
-                <br>
-                <em>ECCV AVGenL Workshop</em>, 2024
-                <br>
-                <!-- <a href="https://xuboshen.github.io/POV/">project page</a> -->
-                <!-- /
-                <a href="https://dl.acm.org/doi/10.1145/3581783.3612484">paper</a> -->
-                <!-- / -->
-                <a href="https://arxiv.org/pdf/2409.06709">arxiv</a>
 
-                <p></p>
-                <p> We reveal that current audio-visual source localization benchmarks (VGG-SS, Epic-Sounding-Object) are easily hacked by vision-only models, therefore calling for a benchmark that requires more audio cues.</p>
-              </td>
-            </tr>
-
+            <!-- ICLR2025 -->
             <tr>
               <td style="padding:20px;width:25%;vertical-align:middle">
                 <img src="images/framework_egonce_plus.png" alt="clean-usnob" width="248" height="113.3 align="center">
@@ -109,11 +87,9 @@
                 <p>We propose EgoNCE++, an asymmetric contrastive learning pretraining objective to solve the EgoVLMs' weakness in distinguishing HOI combinations with word variations.</p>
               </td>
             </tr>
+            <!--/ ICLR2025 -->
 
-
-
-
-
+            <!-- 3DV 2025 -->
             <tr>
               <td style="padding:20px;width:25%;vertical-align:middle">
                 <img src="images/motivation_SPAFormer.png" alt="clean-usnob" width="248" height="219" align="center">
@@ -140,6 +116,33 @@
                   <!-- , effectively achieving promising results on our extended benchmark PartNet-Assembly.  -->
               </td>
             </tr>
+            <!--/ 3DV 2025 -->
+
+            <!-- ECCV Workshop 2024 -->
+            <tr>
+              <td style="padding:20px;width:25%;vertical-align:middle">
+                <img src="images/motivation_unvealing.png" alt="clean-usnob" width="248" height="113.3 align="center">
+              </td>
+              <td width="75%" valign="middle">
+                <!-- <a href="https://drive.google.com/file/d/1YvRx-4hrZoCk-nl6OgVJZlHAqOiN5hWq/view?usp=sharing"> -->
+                  <span class="papertitle"><a href="https://arxiv.org/pdf/2409.06709"> Unveiling Visual Biases in Audio-Visual Localization Benchmarks </a></span>
+                <!-- </a> -->
+                <br>
+                <a href="https://openreview.net/profile?id=~Liangyu_Chen5">Liangyu Chen</a>, <a href="https://yuezih.github.io/">Zihao Yue</a>, <strong>Boshen Xu</strong>, <a href="http://www.jin-qin.com/">Qin Jin</a>
+                <br>
+                <em>ECCV AVGenL Workshop</em>, 2024
+                <br>
+                <!-- <a href="https://xuboshen.github.io/POV/">project page</a> -->
+                <!-- /
+                <a href="https://dl.acm.org/doi/10.1145/3581783.3612484">paper</a> -->
+                <!-- / -->
+                <a href="https://arxiv.org/pdf/2409.06709">arxiv</a>
+
+                <p></p>
+                <p> We reveal that current audio-visual source localization benchmarks (VGG-SS, Epic-Sounding-Object) are easily hacked by vision-only models, therefore calling for a benchmark that requires more audio cues.</p>
+              </td>
+            </tr>
+            <!--/ ECCV Workshop 2024 -->
 
             <tr>
               <td style="padding:20px;width:25%;vertical-align:middle">
