--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
                 <br>
                 <em>3DV</em>, 2025
                 <br>
-                <!-- <a href="https://xuboshen.github.io/POV/">project page</a> -->
+                <a href="https://xuboshen.github.io/SPAFormer/">project page</a>
+                /
                 <!-- /
                 <a href="https://dl.acm.org/doi/10.1145/3581783.3612484">paper</a> -->
                 <!-- / -->
