--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
                   Boshen Xu
                 </p>
                 <h2>About</h2>
-                <p> My research interests include video understanding (e.g., action recognition, vision-language pretraining, etc.) and embodied AI (e.g., 3D object assembly, 3D HOI reconstruction, etc.). I'm currently focus on egocentric vision and related topics that benefit VR/AR/Embodied AI.
+                <p> My research interests include video understanding (e.g., action recognition, vision-language pretraining, etc.) and embodied AI (e.g., 3D object assembly, 3D HOI reconstruction, etc.). I'm currently focusing on egocentric vision and related topics that benefit VR/AR/Embodied AI.
                   </p>
                 <p>I am a second-year PhD student at <a href="http://info.ruc.edu.cn/index.htm">Renmin University of China (RUC)</a> under the supervision of Professor <a href="https://www.jin-qin.com/">Qin Jin</a> at <a href="https://www.ruc-aim3.com/">AIM3 Lab</a>.
                   Prior to joining RUC, I got my bachelor degree from <a href="https://www.scse.uestc.edu.cn/">School of Computer Science and Engineering</a>, <a href="https://www.uestc.edu.cn/">University of Electronic Science and Technology of China (UESTC)</a>.
-                  I got a GPA 3.97/4.00(90.41/100), ranked 2/65 in the major.
+                  
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:boshenx@ruc.edu.cn">Email</a> &nbsp;/&nbsp;
@@ -60,6 +60,28 @@
           
 
 
+            <!-- timezero -->
+            <tr>
+              <td style="padding:20px;width:25%;vertical-align:middle">
+                <img src="images/TimeZero_comps.png" alt="TimeZero" width="248" height="155.57" align="center">
+              </td>
+              <td width="75%" valign="middle">
+                <span class="papertitle">
+                  <a href="http://arxiv.org/abs/2503.13377">TimeZero: Temporal Video Grounding with Reasoning-Guided LVLM</a>
+                </span>
+                <br>
+                <a href="https://openreview.net/profile?id=~Ye_Wang12">Ye Wang*</a>, <strong>Boshen Xu*</strong>, <a href="https://yuezih.github.io/">Zihao Yue</a>, <a href="https://openreview.net/profile?id=~Zihan_Xiao1">Zihan Xiao</a> , <a href="https://openreview.net/profile?id=~Ziheng_Wang5">Ziheng Wang</a>, 
+                <a href="https://openreview.net/profile?id=~Liang_Zhang10">Liang Zhang</a> , <a href="https://openreview.net/profile?id=~Dingyi_Yang1">Dingyi Yang</a>, <a href="https://jarviswang94.github.io/">Wenxuan Wang</a>, <a href="http://www.jin-qin.com/">Qin Jin</a>
+                <br>
+                <em>arxiv</em>, 2025
+                <br>
+                <a href="https://github.com/www-Ye/TimeZero">code</a> /
+                <a href="http://arxiv.org/abs/2503.13377">paper</a>
+                <p></p>
+                <p>We propose TimeZero, a reasoning-guided LVLM for temporal video grounding that extends inference through reinforcement learning to reason about video-language relationships. Achieves state-of-the-art performance on Charades-STA benchmark.</p>
+              </td>
+            </tr>
+            <!--/ timezero -->
 
             <!-- ICLR2025 -->
             <tr>
