--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                   <a href="http://arxiv.org/abs/2503.13377">EgoDTM: Towards 3D-Aware Egocentric Video-Language Pretraining</a>
                 </span>
                 <br>
-                <strong>Boshen Xu*</strong>, <a href="https://openreview.net/profile?id=~Yuting_Mei2">Yuting Mei</a>, <a href="https://openreview.net/profile?id=~liu_xinbi1">Xinbi Liu</a>, <a href="http://zhengsipeng.github.io/">Sipeng Zheng</a>, <a href="http://www.jin-qin.com/">Qin Jin</a>
+                <strong>Boshen Xu</strong>, <a href="https://openreview.net/profile?id=~Yuting_Mei2">Yuting Mei</a>, <a href="https://openreview.net/profile?id=~liu_xinbi1">Xinbi Liu</a>, <a href="http://zhengsipeng.github.io/">Sipeng Zheng</a>, <a href="http://www.jin-qin.com/">Qin Jin</a>
                 <br>
                 <em>arxiv</em>, 2025
                 <br>
@@ -100,7 +100,7 @@
                 <a href="https://github.com/www-Ye/TimeZero">code</a> /
                 <a href="http://arxiv.org/abs/2503.13377">paper</a>
                 <p></p>
-                <p>We propose TimeZero, a reasoning-guided LVLM for temporal video grounding that extends inference through reinforcement learning to reason about video-language relationships. Achieves state-of-the-art performance on Charades-STA benchmark.</p>
+                <p>We propose <strong>TimeZero</strong>, a reasoning-guided LVLM for temporal video grounding that extends inference through reinforcement learning to reason about video-language relationships. Achieves state-of-the-art performance on Charades-STA benchmark.</p>
               </td>
             </tr>
             <!--/ timezero -->
@@ -128,7 +128,7 @@
                 <a href="https://openreview.net/pdf?id=M8gXSFGkn2">paper</a>
 
                 <p></p>
-                <p>We propose EgoNCE++, an asymmetric contrastive learning pretraining objective to solve the EgoVLMs' weakness in distinguishing HOI combinations with word variations.</p>
+                <p>We propose <strong>EgoNCE++</strong>, an asymmetric contrastive learning pretraining objective to solve the EgoVLMs' weakness in distinguishing HOI combinations with word variations.</p>
               </td>
             </tr>
             <!--/ ICLR2025 -->
@@ -157,7 +157,7 @@
                 <a href="https://arxiv.org/abs/2403.05874">arxiv</a>
 
                 <p></p>
-                <p>We present SPAFormer, a transformer-based framework that leverages assembly sequences constraints with three part encodings to address the combinatorial explosion challenge in 3D-PA task. 
+                <p>We present <strong>SPAFormer</strong>, a transformer-based framework that leverages assembly sequences constraints with three part encodings to address the combinatorial explosion challenge in 3D-PA task. 
                   <!-- , effectively achieving promising results on our extended benchmark PartNet-Assembly.  -->
               </td>
             </tr>
@@ -211,7 +211,7 @@
                 <a href="https://arxiv.org/abs/2403.05856">arxiv</a>
 
                 <p></p>
-                <p>We propose POV, a view adaptation framework that enables transfer learning from multi-view third-person videos to egocentric videos.</p>
+                <p>We propose <strong>POV</strong>, a view adaptation framework that enables transfer learning from multi-view third-person videos to egocentric videos.</p>
               </td>
             </tr>
             <tr>
@@ -227,7 +227,7 @@
                 <br>
                 <em>CVPR</em>, 2023
                 <p>We introduce
-                  OpenCat, a language modeling framework that reformulates HOI prediction as sequence generation.</p>
+                  <strong>OpenCat</strong>, a language modeling framework that reformulates HOI prediction as sequence generation.</p>
               </td>
             </tr>
 
