EgoDTM update arxiv

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               </td>
               <td width="75%" valign="middle">
                 <span class="papertitle">
-                  <a href="http://arxiv.org/abs/2503.13377">EgoDTM: Towards 3D-Aware Egocentric Video-Language Pretraining</a>
+                  <a href="http://arxiv.org/abs/2503.15470">EgoDTM: Towards 3D-Aware Egocentric Video-Language Pretraining</a>
                 </span>
                 <br>
                 <strong>Boshen Xu</strong>, <a href="https://openreview.net/profile?id=~Yuting_Mei2">Yuting Mei</a>, <a href="https://openreview.net/profile?id=~liu_xinbi1">Xinbi Liu</a>, <a href="http://zhengsipeng.github.io/">Sipeng Zheng</a>, <a href="http://www.jin-qin.com/">Qin Jin</a>
@@ -75,7 +75,7 @@
                 <em>arxiv</em>, 2025
                 <br>
                 <a href="https://github.com/xuboshen/EgoDTM">code</a> /
-                <a href="http://arxiv.org/abs/2503.13377">paper</a>
+                <a href="http://arxiv.org/abs/2503.15470">arxiv</a>
                 <p></p>
                 <p>We introduce <strong>EgoDTM</strong>, an Egocentric Depth- and Text-aware Model that bridges the gap between 2D visual understanding and 3D spatial awareness. </p>
               </td>
