modify spaformer citation

--- a/SPAFormer/index.html
+++ b/SPAFormer/index.html
@@ -264,14 +264,13 @@ Extensive experiments demonstrate the superior generalization capabilities of SP
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@misc{xu2024spaformersequential3dassembly,
-      title={SPAFormer: Sequential 3D Part Assembly with Transformers}, 
+    <pre><code>@inproceedings{
+      xu2025spaformer,
+      title={{SPAF}ormer: Sequential 3D Part Assembly with Transformers},
       author={Boshen Xu and Sipeng Zheng and Qin Jin},
-      year={2024},
-      eprint={2403.05874},
-      archivePrefix={arXiv},
-      primaryClass={cs.CV},
-      url={https://arxiv.org/abs/2403.05874}, 
+      booktitle={International Conference on 3D Vision 2025},
+      year={2025},
+      url={https://openreview.net/forum?id=kryphH8cJP}
 }</code></pre>
   </div>
 </section>
